@@ -5,6 +5,7 @@ author:
 build_requires:
   CSS::Struct::Output::Raw: 0
   CSS::Struct::Output::Structure: 0
+  Data::HTML::Element::A: 0.1
   ExtUtils::MakeMaker: 6.59
   Tags::Output::Raw: 0
   Tags::Output::Structure: 0
