@@ -1,12 +1,13 @@
 use strict;
 use warnings;
 
+use Data::HTML::Element::A;
 use English;
 use Error::Pure::Utils qw(clean);
 use Tags::HTML::Table::View;
 use Tags::Output::Structure;
 use Test::MockObject;
-use Test::More 'tests' => 13;
+use Test::More 'tests' => 15;
 use Test::NoWarnings;
 
 # Test.
@@ -194,6 +195,46 @@ is_deeply(
 		['e', 'table'],
 	],
 	'Tags code for table with data (data in callback).',
+);
+
+# Test.
+$tags = Tags::Output::Structure->new;
+$obj = Tags::HTML::Table::View->new(
+	'header' => 0,
+	'tags' => $tags,
+);
+my $a = Data::HTML::Element::A->new(
+	'url' => 'https://example.com',
+	'data' => ['Link'],
+);
+$obj->init([
+	[
+		'Data col #1',
+		$a,
+	],
+], 'No data.');
+$ret = $obj->process;
+is($ret, undef, 'process() returns undef.');
+$ret_ar = $tags->flush(1);
+is_deeply(
+	$ret_ar,
+	[
+		['b', 'table'],
+		['a', 'class', 'table'],
+		['b', 'tr'],
+		['b', 'td'],
+		['d', 'Data col #1'],
+		['e', 'td'],
+		['b', 'td'],
+		['b', 'a'],
+		['a', 'href', 'https://example.com'],
+		['d', 'Link'],
+		['e', 'a'],
+		['e', 'td'],
+		['e', 'tr'],
+		['e', 'table'],
+	],
+	'Tags code for table with data (data in Data::HTML::Element::A object).',
 );
 
 # Test.
